<resources>
    <string name="app_name">RoboTalk-Lib</string>
    <string name="zmq_settings">ZMQ Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="nick_name">Nickname</string>
    <string name="address">Address</string>
    <string name="command_port">Command Port</string>
    <string name="video_port">Video Port</string>
    <string name="event_port">Event Port</string>
    <string name="port">Port</string>
    <string name="media_port">Media Port</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="control_fwd">Fwd</string>
    <string name="control_left">Left</string>
    <string name="control_bwd">Bwd</string>
    <string name="control_right">Right</string>
    <string name="control_bwdright">Bwd Right</string>
    <string name="control_bwdleft">Bwd Left</string>
    <string name="control_fwdleft">Fwd Left</string>
    <string name="control_fwdright">Fwd Right</string>
    <string name="control_stop">Stop</string>
    <string name="control">Remote Control</string>
    <string name="cameraup">Camera Up</string>
    <string name="cameradown">Camera Down</string>
    <string name="joystick">Joystick</string>
    <string name="keypad">Keypad</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for new devices</string>
    <string name="pairing_message">After pairing, press menu and connect.</string>
    <string name="wait_till_bt_on">Turning Bluetooth on (to connect to your robot)</string>
    <string name="bt_off_message">Bluetooth turned off. See you later!</string>
    <string name="connecting_please_wait">Connecting to your robot.\nPlease wait...</string>
    <string name="no_paired_nxt">No paired NXT robot found!</string>
    <string name="problem_at_connecting">Problem in creating a connection!</string>
    <string name="problem_at_closing">Problem in closing the connection!</string>
    <string name="problem_at_sending">Problem in sending a message!</string>
    <string name="problem_at_receiving">Problem in receiving a message!</string>
    <string name="current_position">Current position: </string>
    <string name="bt_error_dialog_title">Bluetooth Error</string>
    <string name="bt_error_dialog_message">
        Oh, no! It seems that your robot is not switched on. Please make sure that
        your robot is on, has BlueTooth activated and then try again to connect.
    </string>
    <string name="bt_needs_to_be_enabled">You need to enable BT first!"</string>
    <string name="feedback_up">Up</string>
    <string name="feedback_ok">OK</string>
    <string name="feedback_down">Down</string>
    <string name="calibrate_description">Execute the following steps to calibrate the robot</string>
    <string name="calibrate_circle">Circle</string>
    <string name="calibrate_distance">Distance</string>
    <string name="calibrate_start">Start</string>
    <string name="calibrate_toohigh">Too High</string>
    <string name="calibrate_toolow">Too Low</string>
    <string name="rover_infrared">Infrared</string>
    <string name="rover_res640x480">640 x 480</string>
    <string name="rover_res320x240">320 x 240</string>
    <string name="ac13rover_title">AC13 Rover</string>
    <string name="ac13rover_commands">AC13 Rover Commands</string>
    <string name="rover2_title">Rover 2.0</string>
    <string name="rover2_commands">Rover 2.0 Commands</string>
    <string name="rover2_light">Light</string>
    <string name="battery">Battery</string>
    <string name="spytank_title">I-Spy Tank</string>
    <string name="spytank_commands">I-Spy Tank Commands</string>
    <string name="replicator_title">Replicator</string>
    <string name="replicator_commands">Replicator Commands</string>
    <string name="ardrone_takeoff">Take Off</string>
    <string name="ardrone_land">Land</string>
    <string name="ardrone_battery">Battery</string>
    <string name="ardrone_altitude">Altitude</string>
    <string name="ardrone_pitch">Pitch</string>
    <string name="ardrone_roll">Roll</string>
    <string name="ardrone_yaw">Yaw</string>
    <string name="ardrone_ctrlstate">Control State</string>
    <string name="ardrone_sensors">Sensors</string>
    <string name="ardrone_camera">Camera:</string>
    <string name="ardrone_title">AR Drone</string>
    <string name="ardrone_commands">AR Drone Commands</string>
    <string name="ardrone_up">Up</string>
    <string name="ardrone_down">Down</string>
    <string name="ardrone_rotleft">Rotate Left</string>
    <string name="ardrone_rotright">Rotate Right</string>
    <string name="parrot_vx">Vx</string>
    <string name="parrot_vy">Vy</string>
    <string name="parrot_vz">Vz</string>
    <string name="nxt_title">Mindstorm NXT</string>
    <string name="nxt_commands">NXT Commands</string>
    <string name="nxt_lbl_colour">Colour:</string>
    <string name="nxt_lbl_distance">Distance:</string>
    <string name="nxt_lbl_Sound">Sound:</string>
    <string name="nxt_lbl_pushbutton">Push Button Pressed:</string>
    <string name="nxt_lbl_sonic">Sonic:</string>
    <string name="nxt_sensor_1_cb">Sensor 1</string>
    <string name="nxt_value">Value:</string>
    <string name="nxt_sensor_2_cb">Sensor 2</string>
    <string name="nxt_sensor_3_cb">Sensor 3</string>
    <string name="nxt_sensor_4_cb">Sensor 4</string>
    <string name="nxt_rawvalue">Raw Value:</string>
    <string name="nxt_normvalue">Normalized Value:</string>
    <string name="nxt_scalevalue">Scaled Value:</string>
    <string name="nxt_calibvalue">Calibrated Value:</string>
    <string name="nxt_motor_1_cb">Motor 1</string>
    <string name="nxt_motor_2_cb">Motor 2</string>
    <string name="nxt_motor_3_cb">Motor 3</string>
    <string name="nxt_reset">Reset</string>
    <string name="nxt_powersetpoint">Power Setpoint:</string>
    <string name="nxt_tachocount">Tacho Count:</string>
    <string name="nxt_rotationcount">Rotation Count:</string>
    <string name="piratedotty_title">Pirate Dotty</string>
    <string name="piratedotty_commands">Pirate Dotty Commands</string>
    <string name="arduino_title">Arduino</string>
    <string name="arduino_commands"></string>
    <string name="roomba_title">Roomba</string>
    <string name="roomba_chargingstate">Charging State:</string>
    <string name="roomba_charge">Charge:</string>
    <string name="roomba_temperature">Temperature:</string>
    <string name="roomba_power">Power:</string>
    <string-array name="roomba_sensor_pkgs">
        <item >Environment Sensors</item>
        <item >Controls, Buttons, Actuators</item>
        <item >Power Settings</item>
    </string-array>
    <string name="roomba_choose_sensor_pkg">Choose a sensor package</string>
    <string name="roomba_choose_sensor">Choose a sensor</string>
    <string name="roomba_lbl_wheeldrop">Wheeldrop</string>
    <string name="roomba_lbl_BumpLeft">Bump Left</string>
    <string name="roomba_lbl_bumpright">Bump Right</string>
    <string name="roomba_lbl_casterwd">Caster</string>
    <string name="roomba_lbl_leftwd">Left</string>
    <string name="roomba_lbl_rightwd">Right</string>
    <string name="roomba_lbl_Wall">Wall</string>
    <string name="roomba_lbl_cliffleft">Left</string>
    <string name="roomba_lbl_clifffrontleft">Front Left</string>
    <string name="roomba_lbl_clifffrontright">Front Right</string>
    <string name="roomba_lbl_cliffright">Right</string>
    <string name="roomba_lbl_wall">Wall</string>
    <string name="roomba_lbl_virtualwall">Virtual Wall</string>
    <string name="roomba_lbl_dirtleft">Dirt Left</string>
    <string name="roomba_lbl_dirtright">Dirt Right</string>
    <string name="roomba_lbl_motorovercurrents">Motor Overcurrents:</string>
    <string name="roomba_lbl_driveleft">Drive Left</string>
    <string name="roomba_lbl_driveright">Drive Right</string>
    <string name="roomba_lbl_mainbrush">Main Brush</string>
    <string name="roomba_lbl_vacuum">Vacuum</string>
    <string name="roomba_lbl_sidebrush">Side Brush</string>
    <string name="roomba_lbl_cliffsensors">Cliff Sensors:</string>
    <string name="roomba_commands">Roomba Commands</string>
    <string name="roomba_lbl_remoteopcode">Remote OpCode:</string>
    <string name="roomba_lbl_buttons">Buttons pressed:</string>
    <string name="roomba_lbl_Power">Power</string>
    <string name="roomba_lbl_spot">Spot</string>
    <string name="roomba_lbl_Clean">Clean</string>
    <string name="roomba_lbl_max">Max</string>
    <string name="roomba_lbl_distance">Distance:</string>
    <string name="roomba_lbl_angle">Angle:</string>
    <string name="roomba_btn_off">Off</string>
    <string name="roomba_btn_dock">Dock</string>
    <string name="roomba_btn_clean">Clean</string>
    <string name="roomba_brushcontrol">Control the Brushes</string>
    <string name="roomba_btn_mainbrush">Main Brush</string>
    <string name="roomba_btn_sidebrush">Side Brush</string>
    <string name="roomba_btn_vacuum">Vacuum</string>
    <string name="roomba_btn_power">Power</string>
    <string name="roboscooper_title">RoboScooper</string>
    <string name="roboscooper_commands">RoboScooper Commands</string>
    <string name="roboscooper_dump">Dump</string>
    <string name="roboscooper_pickup">Pick-up</string>
    <string name="roboscooper_talk">Talk</string>
    <string name="roboscooper_vision">Vision</string>
    <string name="roboscooper_whack">Whack</string>
    <string name="roboscooper_cleansweep">Clean Sweep</string>
    <string name="roboscooper_playmodes">Play Modes</string>
    <string name="brainlink_sensors">Brainlink Sensors</string>
    <string name="brainlink_accelerometer">Accelerometer</string>
    <string name="brainlink_xaxis">x-axis</string>
    <string name="brainlink_yaxis">y-axis</string>
    <string name="brainlink_zaxis">z-axis</string>
    <string name="brainlink_light">Light</string>
    <string name="brainlink_intensity">Intensity</string>
    <string name="brainlink_battery">Battery</string>
    <string name="brainlink_batterylevel">Level</string>
    <string name="brainlink_rawvalue">Raw Value</string>
    <string name="spykee_title">Spykee</string>
    <string name="spykee_commands">Spykee Commands</string>
    <string name="spykee_canceldock">Cancel Dock</string>
    <string name="spykee_dock">Dock</string>
    <string name="spykee_undock">Undock</string>
    <string name="spykee_battery">Battery</string>
    <string name="spykee_dockingstate">Docking State</string>
    <string name="spykee_port">Port</string>
    <string name="spykee_address">Address</string>
    <string name="spykee_login">Login</string>
    <string name="spykee_password">Password</string>
    <string name="spykee_led1">Led 1</string>
    <string name="spykee_led2">Led 2</string>
    <string name="spykee_led3">Led 3</string>
    <string name="spykee_play">Play</string>
    <string name="dotty_title">Dotty</string>
    <string name="dotty_commands">Dotty Commands</string>
    <string name="dotty_sensorselection">Choose which sensors you want to display</string>
    <string name="dotty_dist">Distance</string>
    <string name="dotty_light">Light</string>
    <string name="dotty_value">Value</string>
    <string name="dotty_sound">Sound</string>
    <string name="dotty_battery">Battery</string>
    <string name="dotty_motorsensor1">Motor 1</string>
    <string name="dotty_motorsensor2">Motor 2</string>
    <string name="dotty_wheel1">Wheel 1</string>
    <string name="dotty_wheel2">Wheel 2</string>
    <string name="dotty_led1">Led 1</string>
    <string name="dotty_led2">Led 2</string>
    <string name="dotty_led3">Led 3</string>
</resources>