<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tblConnectionSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_marginRight="6dip"
                android:inputType="textUri"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:text="@string/port"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtPort"
                android:layout_marginRight="6dip"
                android:inputType="numberSigned"
                android:singleLine="true" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/trMediaPort"
            android:visibility="gone" >
            
            <TextView
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:text="@string/media_port"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtMediaPort"
                android:layout_marginRight="6dip"
                android:inputType="numberSigned"
                android:singleLine="true" >
            </EditText>
        </TableRow>
        
    </TableLayout>
   
</LinearLayout>