<?xml version="1.0" encoding="utf-8"?>
<org.dobots.utilities.LockableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:gravity="fill" >
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <ToggleButton
	            android:id="@+id/btnRemoteControl"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
	            android:text="@string/control"
	            android:textOff="@string/control"
	            android:textOn="@string/control" />
	        
	        <Button
	            android:id="@+id/btnCamera"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ardrone_camera" />

	    </LinearLayout>
	
	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="20dp" />
    
       <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="vertical" >
		        
	        <LinearLayout
	            android:id="@+id/layCameraContainer"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:adjustViewBounds="true"
	            android:orientation="vertical"
	            android:scaleType="fitCenter" >
	        </LinearLayout>
	        
		    <org.dobots.utilities.ScalableImageView
		        android:id="@+id/ivParrot_Video"
			    android:scaleType="fitCenter" 
			    android:layout_gravity="center_horizontal" 
			    android:layout_height="wrap_content" 
			    android:layout_width="match_parent" 
			    android:adjustViewBounds="true" />
		    
	    </FrameLayout>

	    <include
	        android:id="@+id/layRemoteControl"
	        layout="@layout/robot_parrot_remotectrl"
	        android:visibility="gone" />
			    
	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="20dp" />
	   
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
		
	        <ToggleButton
	            android:id="@+id/btnSensors"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
	            android:text="@string/ardrone_sensors"
	            android:textOn="@string/ardrone_sensors"
	            android:textOff="@string/ardrone_sensors" />
	        
		</LinearLayout>
	  	    
	    <include
	        android:id="@+id/laySensors"
	        layout="@layout/robot_parrot_sensors"
	        android:visibility="gone" />

	</LinearLayout>
</org.dobots.utilities.LockableScrollView>